@@ -215,8 +215,10 @@ module Sequel
       end
 
       module InstanceMethods
+        private
+
         # Set the sti_key column based on the sti_key_map.
-        def before_validation
+        def _before_validation
           if new? && !self[model.sti_key]
             send("#{model.sti_key}=", model.sti_key_chooser.call(self))
           end
